<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Avalanche</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main_game">MainGame</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_game">Start Game</string>
    <string name="store">Store</string>
    <string name="options">Options</string>
    <string name="loadout">Loadout</string>
    <string name="coins">50</string>
    <string name="title_activity_loadout">Loadout</string>
    <string name="action_settings">Settings</string>
    <string name="desc"></string>

</resources>
