<RelativeLayout 
    android:id="@+id/fullscreen_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.pieuw.avalanche.Mainmenu" >
    
    <Button
        android:id="@+id/start_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loadout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/logo"
        android:text="@string/start_game" />
    
    <Button
        android:id="@+id/loadout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/options"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:text="@string/loadout" />

    <Button
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/store"
        android:text="@string/options" />

    <Button
        android:id="@+id/store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/money"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:text="@string/store" />
    
    <RelativeLayout
        android:id="@+id/money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/anchor_2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/rounded_layout">

        <TextView
            android:id="@+id/anchor_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>
        
        <TextView
            android:id="@+id/coins"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/anchor_1"
            android:text="@string/coins" 
            android:layout_marginLeft="3dip"
            android:layout_centerVertical="true"/>
                
        <ImageView
            android:id="@+id/coinstack_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="@id/coins"
            android:layout_alignParentBottom="@id/coins"
            android:layout_toLeftOf="@id/anchor_1"
            android:layout_marginRight="3dip"
            android:src="@drawable/coinstack_icon" />
        
    </RelativeLayout>

    <TextView
	    android:id="@+id/anchor_2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@drawable/logo" />
    
</RelativeLayout>